--- a/src/screens/Home/components/second/second.css
+++ b/src/screens/Home/components/second/second.css
@@ -22,7 +22,7 @@
     width: 40%;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 1000px) {
     .secondWrapper { flex-direction: column; }   
     .secondText { width: 80%; }
 }
